--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -24,6 +24,13 @@
             android:entries="@array/settings_team_count_labels"
             android:entryValues="@array/settings_team_count_values"
             android:icon="@drawable/nav_setting" />
+
+        <SwitchPreferenceCompat
+            android:defaultValue="false"
+            android:icon="@drawable/nav_setting"
+            android:key="auto_reset_coming_players"
+            android:summary="@string/setting_summary_auto_reset_coming"
+            android:title="@string/setting_title_auto_reset_coming" />
     </PreferenceCategory>
 
     <PreferenceCategory android:title="Appearance">
